<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:id="@+id/edit"
            android:text="@string/reply_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:id="@+id/delete"
            android:layout_below="@+id/edit"
            android:text="@string/reply_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:id="@+id/report"
            android:layout_below="@+id/delete"
            android:text="@string/reply_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</layout>