<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.app_mo.animefaq.EditDescription">

        <EditText
            android:id="@+id/description"
            android:layout_width="286dp"
            android:layout_height="245dp"
            android:gravity="top"
            android:background="@drawable/edittext_border"
            android:inputType="textMultiLine|textImeMultiLine"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="37dp"
            android:padding="10dp"
            android:ems="10"
            android:maxLines="10"
            android:hint="@string/write_description"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_description"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_description"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="72dp"
            android:layout_height="75dp"
            android:background="@drawable/circular_button"
            android:contentDescription="@string/next"
            android:src="@drawable/continue_next"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints"
            android:layout_marginRight="28dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="71dp"
            app:layout_constraintTop_toBottomOf="@+id/body_text" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="72dp"
            android:layout_height="75dp"
            android:background="@drawable/circular_button_grey"
            android:contentDescription="@string/next"
            android:src="@drawable/back"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="71dp"
            app:layout_constraintTop_toBottomOf="@+id/body_text"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>
